<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/expression_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="36sp"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/result_editor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="1+2+33/3" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/result_editor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:textSize="24sp"
        android:textColor="@color/light_white"
        app:layout_constraintBottom_toTopOf="@id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expression_editor"
        tools:text="14" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.39" />

    <Button
        android:id="@+id/button_ce"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:text="@string/btn_ce"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/black_1"
        app:layout_constraintEnd_toStartOf="@+id/button_c"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/button_seven"/>

    <Button
        android:id="@+id/button_c"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:text="@string/btn_c"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/black_1"
        app:layout_constraintEnd_toStartOf="@+id/button_delete"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button_ce"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/button_eight"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/button_delete"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="16dp"
        android:textColor="@color/white"
        app:icon="@drawable/ic_outline_backspace_24"
        app:iconGravity="textStart"
        app:elevation="5dp"
        android:backgroundTint="@color/black_1"
        app:layout_constraintEnd_toStartOf="@+id/button_divide"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_c"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/button_nine"/>

    <Button
        android:id="@+id/button_divide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginEnd="4dp"
        android:padding="18dp"
        android:text="@string/btn_divide"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:backgroundTint="@color/black_1"
        app:elevation="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toEndOf="@+id/button_delete"
        app:layout_constraintTop_toBottomOf="@id/guideline3"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"/>

    <View
        android:id="@+id/bg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_c" />

    <Button
        android:id="@+id/button_seven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_seven"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_ce"
        app:layout_constraintEnd_toStartOf="@id/button_eight"
        app:layout_constraintBottom_toTopOf="@id/button_four"
        app:layout_constraintHorizontal_chainStyle="packed"/>

    <Button
        android:id="@+id/button_eight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_eight"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toEndOf="@id/button_seven"
        app:layout_constraintTop_toBottomOf="@id/button_c"
        app:layout_constraintEnd_toStartOf="@id/button_nine"
        app:layout_constraintBottom_toTopOf="@id/button_five"/>

    <Button
        android:id="@+id/button_nine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_nine"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toEndOf="@id/button_eight"
        app:layout_constraintTop_toBottomOf="@id/button_delete"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintBottom_toTopOf="@id/button_six"/>

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginEnd="4dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_multiply"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/black_1"
        app:layout_constraintStart_toEndOf="@id/button_nine"
        app:layout_constraintTop_toBottomOf="@id/button_divide"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_minus"/>

    <Button
        android:id="@+id/button_four"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_four"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_seven"
        app:layout_constraintEnd_toStartOf="@id/button_five"
        app:layout_constraintBottom_toTopOf="@id/button_one"
        />

    <Button
        android:id="@+id/button_five"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_five"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toEndOf="@id/button_four"
        app:layout_constraintTop_toBottomOf="@id/button_eight"
        app:layout_constraintEnd_toStartOf="@id/button_six"
        app:layout_constraintBottom_toTopOf="@id/button_two"
        />

    <Button
        android:id="@+id/button_six"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_six"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toEndOf="@id/button_five"
        app:layout_constraintTop_toBottomOf="@id/button_nine"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintBottom_toTopOf="@id/button_three"
        />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginEnd="4dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_minus"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/black_1"
        app:layout_constraintStart_toEndOf="@id/button_six"
        app:layout_constraintTop_toBottomOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        />

    <Button
        android:id="@+id/button_one"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_one"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_four"
        app:layout_constraintEnd_toStartOf="@id/button_two"
        app:layout_constraintBottom_toTopOf="@id/button_dot"
        />

    <Button
        android:id="@+id/button_two"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_two"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toEndOf="@id/button_one"
        app:layout_constraintTop_toBottomOf="@id/button_five"
        app:layout_constraintEnd_toStartOf="@id/button_three"
        app:layout_constraintBottom_toTopOf="@id/button_zero"
        />

    <Button
        android:id="@+id/button_three"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_three"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toEndOf="@id/button_two"
        app:layout_constraintTop_toBottomOf="@id/button_six"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintBottom_toTopOf="@id/button_zeros"
        />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginEnd="4dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_plus"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/black_1"
        app:layout_constraintStart_toEndOf="@id/button_three"
        app:layout_constraintTop_toBottomOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_dot"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/black_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_one"
        app:layout_constraintEnd_toStartOf="@id/button_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_zero"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toEndOf="@id/button_dot"
        app:layout_constraintTop_toBottomOf="@id/button_two"
        app:layout_constraintEnd_toStartOf="@id/button_zeros"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/button_zeros"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_zeros"
        android:textSize="20sp"
        app:elevation="5dp"
        android:backgroundTint="@color/colorBtnNumber"
        app:layout_constraintStart_toEndOf="@id/button_zero"
        app:layout_constraintTop_toBottomOf="@id/button_three"
        app:layout_constraintEnd_toStartOf="@id/button_equal"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="@color/light_red"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="2dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:layout_marginEnd="4dp"
        android:padding="18dp"
        android:gravity="center"
        android:text="@string/btn_equal"
        android:textSize="20sp"
        app:elevation="5dp"
        app:layout_constraintStart_toEndOf="@id/button_zeros"
        app:layout_constraintTop_toBottomOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
